# lon

./: CHANGELOG.md  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: ci.yml  update.yml
nix/: pre-commit.nix
nix/tests/: lon.nix
nix/tests/fixtures/: key  key.pub
rust/lon/: Cargo.toml
rust/lon/src/: bot.rs  cli.rs  commit_message.rs  config.rs  git.rs  http.rs  init.rs  lock.rs  lon.nix  main.rs  nix.rs  sources.rs
rust/lon/src/bot/: forgejo.rs  github.rs  gitlab.rs
rust/lon/src/http/: github.rs
rust/lon/src/init/: niv.rs
rust/lon/src/lock/: v1.rs
rust/lon/tests/integration/: main.rs
rust/lon/tests/integration/ignored/: add.rs
